# inference

./: .gitignore  CMakeLists.txt  dummy_config.yaml  toolchain-arm.cmake
include/: common.h  executor.h  model_info.h  monitor.h  session.h  task_queue.h  tensor.h  util.h
include/backend/: backend.h  dummy.h  lynxi.h
src/: dummy.cc  executor.cc  lynxi.cc  main.cc  monitor.cc  resnet.cc  session.cc  util.cc
src/app/: lenet.cc
src/framework/: monitor.cc  session.cc
src/framework/backend/: lynxi.cc
